fix -- background distorted,placeholder visible

--- a/style.css
+++ b/style.css
@@ -56,6 +56,11 @@ main {
 }
 
 #wallpaper {
+    width: 100%;
+    height: 100%;
+    background-image: url(assets/images/weather-app-background.jpg);
+    background-size: cover;
+    background-position: center;
     background-attachment: fixed;
     overflow: hidden;
     filter: brightness(0.7);
@@ -82,27 +87,24 @@ section {
     font-size: 90px;
 }
 form {
+
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 10px;
     width: 100vw;
     margin: 20px 0 0 0;
+
     & input {
         text-align: center;
-        width: 270px;
+        max-width: 270px;
         font-size: xx-large;
         border: 1px solid white;
         padding: 4px 10px;
         border-radius: 4px;
-        background: rgba(135, 207, 235, 0);
-        color: inherit;
-        outline: none;
+        background: transparent;
         padding: 4px;
-
-        &:focus {
-            outline: none;
-        }
+        cursor:text;
     }
 
     & button {
@@ -112,5 +114,6 @@ form {
         padding: 9px;
         font-size: x-large;
         border-radius: 4px;
+        cursor: pointer;
     }
 }
